--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -5,13 +5,14 @@
 
 	&._extended {
 		border-color: rgba(255, 255, 255, .4);
-		border-radius: 3px;
+		border-radius: var(--amc-videoplayer-roundedCorder);
 		background-color: rgba(255, 255, 255, .2);
 	}
 }
 
 .amc-videoplayer {
 	--amc-videoplayer-accentColor: #fff;
+	--amc-videoplayer-roundedCorder: 3px;
 	.ComponentsDefault();
 	position: relative;
 	display: flex;
@@ -21,41 +22,87 @@
 		--amc-progressbar-accentColor: var(--amc-videoplayer-accentColor);
 	}
 
+	&-settings {
+		&-subvalue {
+			opacity: .7;
+			font-size: .8em;
+		}
+
+		&-angrymonkeycloud {
+			flex: 1;
+			height: 100%;
+			display: flex;
+			justify-content: center;
+
+			svg {
+				align-self: flex-end;
+				width: 100%;
+				max-width: 150px;
+			}
+
+			.amc-videoplayer-svg-fill {
+				fill: #fff;
+			}
+		}
+	}
+
 	&-sidebar {
 		background-color: rgba(0, 0, 0, .4);
 		white-space: nowrap;
-		overflow: hidden;
-		padding: 20px;
+		overflow: hidden auto;
+		padding: 10px 0;
 		min-width: 20%;
 		max-width: 60%;
 		color: #fff;
-		border-radius: 5px;
+		border-radius: var(--amc-videoplayer-roundedCorder);
 		margin: 7px;
+
+		> div > * {
+			padding-left: 20px !important;
+			padding-right: 20px !important;
+		}
 
 		&-menu {
 			display: flex;
 			flex-direction: column;
 			gap: 10px;
+			height: 100%;
 		}
 
 		button {
 			font-size: 1.1em;
 			width: 100%;
 			text-align: left;
-			padding: 5px;
+			padding: 10px;
+			border: 1px solid transparent;
+
+			&._selected {
+				opacity: 1;
+				pointer-events: none;
+			}
+
+			&:hover:not(._selected) {
+				background-color: rgba(255, 255, 255, .2);
+			}
 		}
 
 		label {
 			display: block;
 			margin-top: 10px;
-			opacity: .8;
 			font-size: 1.1rem;
+			opacity: 1;
 		}
 
 		&-value {
 			word-wrap: break-word;
 			width: 100%;
 			overflow: hidden;
+			font-size: .8em;
+		}
+
+		&-playbackspeed {
+			display: flex;
+			flex-direction: column;
 		}
 
 		a {
@@ -75,6 +122,7 @@
 	&-content {
 		flex: 1;
 		display: flex;
+		overflow: hidden;
 	}
 
 	&-close {
@@ -83,7 +131,7 @@
 		right: 5px;
 		color: #fff;
 		font-size: 50px;
-		border-radius: 50%;
+		/*border-radius: 50%;*/
 		display: inline-block;
 		display: flex;
 		justify-content: center;
@@ -300,12 +348,12 @@
 	&-seekinfo {
 		display: flex;
 		padding: 7px;
+		padding-top: 0;
 
 		&-container {
 			background-color: rgba(0, 0, 0, .4);
 			color: #fff;
-			border-radius: 5px;
-			/*border: 1px solid #000;*/
+			border-radius: var(--amc-videoplayer-roundedCorder);
 			text-align: center;
 			padding: 10px;
 			white-space: nowrap;
