--- a/Demo/src/css/site.less
+++ b/Demo/src/css/site.less
@@ -87,9 +87,11 @@ body {
         }
 
         > .amc-videoplayer {
-            /*--amc-videoplayer-accentColor: #ae00ff !important;*/
-            width: 800px;
+            max-width: 800px;
+            width: 100vw;
             height: 450px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         > .amc-datetimepicker {
