--- a/Demo/Pages/VideoPlayerPage.razor
+++ b/Demo/Pages/VideoPlayerPage.razor
@@ -2,4 +2,4 @@
 
 <PageBase Title="Blazor Video Player Component" />
 
-<VideoPlayer VideoUrl="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" />
+<VideoPlayer ReserveAspectRatio="true" VideoUrl="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" />
