--- a/Components/VideoPlayer/videoplayer.less
+++ b/Components/VideoPlayer/videoplayer.less
@@ -16,7 +16,15 @@
 	.ComponentsDefault();
 	position: relative;
 	display: flex;
-	flex-direction: column;
+	justify-content: stretch;
+	align-items: stretch;
+
+	&-content {
+		display: flex;
+		flex-direction: column;
+		width: 100%;
+		height: 100%;
+	}
 
 	&-status {
 		::deep svg {
@@ -42,14 +50,15 @@
 			display: flex;
 			justify-content: center;
 
-			svg {
+			::deep svg {
 				align-self: flex-end;
 				width: 100%;
 				max-width: 150px;
-			}
 
-			.amc-videoplayer-svg-fill {
-				fill: #fff;
+
+				.amc-svg-fill {
+					fill: #fff;
+				}
 			}
 		}
 	}
@@ -127,7 +136,7 @@
 		}
 	}
 
-	&-content {
+	&-top {
 		flex: 1;
 		display: flex;
 		overflow: hidden;
@@ -240,7 +249,6 @@
 	&-info,
 	&-controls,
 	&-progress {
-		background-color: rgba(0, 0, 0, .4);
 		padding: 10px;
 		color: #fff;
 		z-index: 2;
@@ -328,6 +336,21 @@
 
 			&-pause {
 				display: inline-block;
+			}
+		}
+	}
+
+	.amc-videoplayer {
+		&-content {
+			transition: background-color 200ms;
+		}
+	}
+
+	&:not(._hidecontrols) {
+
+		.amc-videoplayer {
+			&-content {
+				background-color: rgba(0, 0, 0, .4);
 			}
 		}
 	}
