--- a/Components/VideoPlayer/VideoPlayer.razor.css
+++ b/Components/VideoPlayer/VideoPlayer.razor.css
@@ -35,6 +35,7 @@
 }
 .Extendible {
   border: 1px solid transparent;
+  transition: all var(--transitionDuration);
 }
 .Extendible._extended {
   border-color: rgba(255, 255, 255, 0.4);
@@ -42,8 +43,6 @@
   background-color: rgba(255, 255, 255, 0.2);
 }
 .amc-videoplayer {
-  --amc-videoplayer-accentColor: #fff;
-  --amc-videoplayer-roundedCorder: 3px;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 0.9rem;
   -webkit-touch-callout: none;
@@ -51,6 +50,10 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  --amc-videoplayer-accentColor: #fff;
+  --amc-videoplayer-roundedCorder: 3px;
+  --backgroundColor: rgba(0, 0, 0, 0.4);
+  --transitionDuration: 200ms;
   position: relative;
   display: flex;
   justify-content: stretch;
@@ -101,7 +104,7 @@
   fill: #fff;
 }
 .amc-videoplayer-sidebar {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--backgroundColor);
   white-space: nowrap;
   overflow: hidden auto;
   padding: 10px 0;
@@ -289,6 +292,7 @@
   display: flex;
   align-items: center;
   border: 1px solid transparent;
+  transition: all var(--transitionDuration);
 }
 .amc-videoplayer-volume._extended {
   border-color: rgba(255, 255, 255, 0.4);
@@ -323,10 +327,10 @@
   display: inline-block;
 }
 .amc-videoplayer .amc-videoplayer-content {
-  transition: background-color 200ms;
+  transition: background-color var(--transitionDuration);
 }
 .amc-videoplayer:not(._hidecontrols) .amc-videoplayer-content {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--backgroundColor);
 }
 .amc-videoplayer._hidecontrols * {
   cursor: none;
@@ -349,7 +353,7 @@
   padding-top: 0;
 }
 .amc-videoplayer-seekinfo-container {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: var(--backgroundColor);
   color: #fff;
   border-radius: var(--amc-videoplayer-roundedCorder);
   text-align: center;
