--- a/Components/DateTimePicker/DateTimePicker.razor
+++ b/Components/DateTimePicker/DateTimePicker.razor
@@ -1,17 +1,20 @@
 ﻿@namespace AngryMonkey.Cloud.Components
 
-
 <div class="amc-datetimepicker">
+    
     <div class="amc-datetimepicker-header">
-        <div class="amc-datetimepicker-selecteddate">@SelectedDateDisplay</div>
-
+        <div class="amc-datetimepicker-selecteddate">@SelectedDateTimeDisplay</div>
+    </div>
+    
+    @if (ShowDate)
+    {
         <div class="amc-datetimepicker-selection">
             <button class="amc-datetimepicker-selection-previous" @onclick="OnPrevClick">
                 <svg viewBox="0 0 50 50">
                     <polyline points="36.8,1.5 13.3,24.8 36.8,48 "></polyline>
                 </svg>
             </button>
-            <div @onclick="ChangeSelectionState" class="amc-datetimepicker-selection-info">
+            <div @onclick="ChangeDateSelectionState" class="amc-datetimepicker-selection-info">
                 <span>@DisplaySelectionInfo</span>
             </div>
             <button class="amc-datetimepicker-selection-next" @onclick="OnNextClick">
@@ -20,43 +23,91 @@
                 </svg>
             </button>
         </div>
-    </div>
-    <div class="amc-datetimepicker-body" @ontouchstart="OnBodyTouchStart" @ontouchend="OnBodyTouchEnd">
-        @if (SelectionState == DateTimePickerSelectionState.Day)
-        {
-            <div class="amc-datetimepicker-calendar">
-                <div class="amc-datetimepicker-calendar-weeks">
-                    @foreach (string weekday in WeekDaysNames)
-                    {
-                        <div class="amc-datetimepicker-calendar-week">@weekday</div>
-                    }
-                </div>
+        <div class="amc-datetimepicker-date" @ontouchstart="OnBodyTouchStart" @ontouchend="OnBodyTouchEnd">
+            @if (DateSelectionState == DatePickerSelectionState.Day)
+            {
+                <div class="amc-datetimepicker-calendar">
+                    <div class="amc-datetimepicker-calendar-weeks">
+                        @foreach (string weekday in WeekDaysNames)
+                        {
+                            <div class="amc-datetimepicker-calendar-week">@weekday</div>
+                        }
+                    </div>
 
-                <div class="amc-datetimepicker-calendar-days">
-                    @foreach (DateTimePickerDate date in Days)
+                    <div class="amc-datetimepicker-calendar-days">
+                        @foreach (DateTimePickerDate date in Days)
+                        {
+                            <div class="amc-datetimepicker-calendar-day @date.CssClasses" @onclick="() => OnDateSelected(date)">@date.Day</div>
+                        }
+                    </div>
+                </div>
+            }
+            else if (DateSelectionState == DatePickerSelectionState.Month)
+            {
+                <div class="amc-datetimepicker-months">
+                    @foreach (DateTimePickerMonth month in Months)
                     {
-                        <div class="amc-datetimepicker-calendar-day @date.CssClasses" @onclick="() => OnDateSelected(date)">@date.Day</div>
+                        <div class="amc-datetimepicker-months-month @month.CssClasses" @onclick="() => OnMonthSelected(month.Month)">@month.Name</div>
                     }
                 </div>
+            }
+            else
+            {
+                <div class="amc-datetimepicker-years">
+                    @foreach (DateTimePickerYear year in Years)
+                    {
+                        <div class="amc-datetimepicker-years-year @year.CssClasses" @onclick="() => OnYearSelected(year.Year)">@year.Year</div>
+                    }
+                </div>
+            }
+        </div>
+    }
+    
+    @if (ShowTime)
+    {
+        <div class="amc-datetimepicker-selection">
+            <button class="amc-datetimepicker-selection-previous" @onclick="OnPrevTimeSelectionStateClick">
+                <svg viewBox="0 0 50 50">
+                    <polyline points="36.8,1.5 13.3,24.8 36.8,48 "></polyline>
+                </svg>
+            </button>
+            <div class="amc-datetimepicker-selection-info" @onclick="ChangeTimeSelectionState">
+                <span>@DisplayTimeInfo</span>
             </div>
-        }
-        else if (SelectionState == DateTimePickerSelectionState.Month)
-        {
-            <div class="amc-datetimepicker-months">
-                @foreach (DateTimePickerMonth month in Months)
-                {
-                    <div class="amc-datetimepicker-months-month @month.CssClasses" @onclick="() => OnMonthSelected(month.Month)">@month.Name</div>
-                }
-            </div>
-        }
-        else
-        {
-            <div class="amc-datetimepicker-years">
-                @foreach (DateTimePickerYear year in Years)
-                {
-                    <div class="amc-datetimepicker-years-year @year.CssClasses" @onclick="() => OnYearSelected(year.Year)">@year.Year</div>
-                }
-            </div>
-        }
-    </div>
+            <button class="amc-datetimepicker-selection-next" @onclick="OnNextTimeSelectionStateClick">
+                <svg viewBox="0 0 50 50">
+                    <polyline points="13.3,48.1 36.8,24.8 13.3,1.5 "></polyline>
+                </svg>
+            </button>
+        </div>
+        <div class="amc-datetimepicker-time">
+            @if (TimeSelectionState == TimePickerSelectionState.Minute)
+            {
+                <div class="amc-datetimepicker-minutes">
+                    @foreach (DateTimePickerTime minute in Minutes)
+                    {
+                        <div class="amc-datetimepicker-minutes-minute @minute.CssClasses" @onclick="() => OnMinuteClick(minute)">
+                            @if (minute.Minute % 5 == 0)
+                            {
+                                <b>@minute.Minute.ToString("00")</b>
+                            }
+                            else
+                            {
+                                @minute.Minute.ToString("00")
+                            }
+                        </div>
+                    }
+                </div>
+            }
+            else
+            {
+                <div class="amc-datetimepicker-hours">
+                    @foreach (DateTimePickerHour hour in Hours)
+                    {
+                        <div class="amc-datetimepicker-hours-hour @hour.CssClasses" @onclick="() => OnHourClick(hour)">@hour.Hour.ToString()</div>
+                    }
+                </div>
+            }
+        </div>
+    }
 </div>
