--- a/Demo/Pages/DateTimePickerPage.razor
+++ b/Demo/Pages/DateTimePickerPage.razor
@@ -2,5 +2,16 @@
 
 <PageBase Title="Blazor Video Player Component" />
 
+<div class="amc-datetimepicker-section">
+    <div>
+        <DateTimePicker Mode="DateTimePickerMode.Time"></DateTimePicker>
+    </div>
+    <div>
+        <DateTimePicker Mode="DateTimePickerMode.DateAndTime"></DateTimePicker>
+    </div>
+    <div>
+        <DateTimePicker Mode="DateTimePickerMode.Date"></DateTimePicker>
+    </div>
+</div>
 
-<DateTimePicker />
+
