--- a/Components/DateTimePicker/DateTimePicker.razor
+++ b/Components/DateTimePicker/DateTimePicker.razor
@@ -1,28 +1,18 @@
 ﻿@namespace AngryMonkey.Cloud.Components
 
 <div class="amc-datetimepicker">
-    
+
     <div class="amc-datetimepicker-header">
         <div class="amc-datetimepicker-selecteddate">@SelectedDateTimeDisplay</div>
     </div>
-    
+
     @if (ShowDate)
     {
-        <div class="amc-datetimepicker-selection">
-            <button class="amc-datetimepicker-selection-previous" @onclick="OnPrevClick">
-                <svg viewBox="0 0 50 50">
-                    <polyline points="36.8,1.5 13.3,24.8 36.8,48 "></polyline>
-                </svg>
-            </button>
-            <div @onclick="ChangeDateSelectionState" class="amc-datetimepicker-selection-info">
-                <span>@DisplaySelectionInfo</span>
-            </div>
-            <button class="amc-datetimepicker-selection-next" @onclick="OnNextClick">
-                <svg viewBox="0 0 50 50">
-                    <polyline points="13.3,48.1 36.8,24.8 13.3,1.5 "></polyline>
-                </svg>
-            </button>
-        </div>
+        <AngryMonkey.Cloud.Components.Partials.DateTimePickerNavigation Title="@DisplaySelectionInfo"
+                                                                    OnTitleClicked="ChangeDateSelectionState"
+                                                                    OnPreviousClicked="OnPrevClick"
+                                                                    OnNextClicked="OnNextClick" />
+
         <div class="amc-datetimepicker-date" @ontouchstart="OnBodyTouchStart" @ontouchend="OnBodyTouchEnd">
             @if (DateSelectionState == DatePickerSelectionState.Day)
             {
@@ -62,24 +52,19 @@
             }
         </div>
     }
-    
+
     @if (ShowTime)
     {
-        <div class="amc-datetimepicker-selection">
-            <button class="amc-datetimepicker-selection-previous" @onclick="OnPrevTimeSelectionStateClick">
-                <svg viewBox="0 0 50 50">
-                    <polyline points="36.8,1.5 13.3,24.8 36.8,48 "></polyline>
-                </svg>
-            </button>
-            <div class="amc-datetimepicker-selection-info" @onclick="ChangeTimeSelectionState">
-                <span>@DisplayTimeInfo</span>
-            </div>
-            <button class="amc-datetimepicker-selection-next" @onclick="OnNextTimeSelectionStateClick">
-                <svg viewBox="0 0 50 50">
-                    <polyline points="13.3,48.1 36.8,24.8 13.3,1.5 "></polyline>
-                </svg>
-            </button>
-        </div>
+        @if (ShowDate)
+        {
+            <div class="amc-datetimepicker-datetimeseperator"></div>
+        }
+
+        <AngryMonkey.Cloud.Components.Partials.DateTimePickerNavigation Title="@DisplayTimeInfo"
+                                                                    OnTitleClicked="ChangeTimeSelectionState"
+                                                                    OnPreviousClicked="OnPrevTimeSelectionStateClick"
+                                                                    OnNextClicked="OnNextTimeSelectionStateClick" />
+
         <div class="amc-datetimepicker-time">
             @if (TimeSelectionState == TimePickerSelectionState.Minute)
             {
@@ -87,14 +72,7 @@
                     @foreach (DateTimePickerTime minute in Minutes)
                     {
                         <div class="amc-datetimepicker-minutes-minute @minute.CssClasses" @onclick="() => OnMinuteClick(minute)">
-                            @if (minute.Minute % 5 == 0)
-                            {
-                                <b>@minute.Minute.ToString("00")</b>
-                            }
-                            else
-                            {
-                                @minute.Minute.ToString("00")
-                            }
+                            @minute.DisplayMinute
                         </div>
                     }
                 </div>
@@ -104,7 +82,7 @@
                 <div class="amc-datetimepicker-hours">
                     @foreach (DateTimePickerHour hour in Hours)
                     {
-                        <div class="amc-datetimepicker-hours-hour @hour.CssClasses" @onclick="() => OnHourClick(hour)">@hour.Hour.ToString()</div>
+                        <div class="amc-datetimepicker-hours-hour @hour.CssClasses" @onclick="() => OnHourClick(hour)">@hour.DisplayHour</div>
                     }
                 </div>
             }
