--- a/Components/DateTimePicker/DateTimePicker.razor.css
+++ b/Components/DateTimePicker/DateTimePicker.razor.css
@@ -41,7 +41,8 @@
   align-items: center;
   cursor: pointer;
 }
-.amc-SelectableField._today:after {
+.amc-SelectableField._today:after,
+.amc-SelectableField._now:after {
   position: absolute;
   content: '';
   width: 1em;
@@ -114,82 +115,18 @@
 .amc-datetimepicker-hours {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
-  padding: 2px;
-}
-.amc-datetimepicker-hours-hour {
-  border: 1px solid transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  min-height: 3em;
-  min-width: 3em;
-}
-.amc-datetimepicker-hours-hour._selected {
-  background-color: var(--amc-datetimepicker-accentColor);
-  color: var(--amc-datetimepicker-backgroundColor);
-}
-.amc-datetimepicker-hours-hour:hover {
-  border-color: var(--amc-datetimepicker-accentColor);
 }
 .amc-datetimepicker-minutes {
   display: grid;
   grid-template-columns: repeat(10, 1fr);
-  padding: 2px;
-}
-.amc-datetimepicker-minutes-minute {
-  border: 1px solid transparent;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  min-height: 3em;
-  min-width: 3em;
-}
-.amc-datetimepicker-minutes-minute._selected {
-  background-color: var(--amc-datetimepicker-accentColor);
-  color: var(--amc-datetimepicker-backgroundColor);
-}
-.amc-datetimepicker-minutes-minute:hover {
-  border-color: var(--amc-datetimepicker-accentColor);
-}
-.amc-datetimepicker-selection {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.amc-datetimepicker-selection button {
-  border: none;
-  background-color: transparent !important;
-  cursor: pointer;
-  padding: 15px;
-}
-.amc-datetimepicker-selection button svg {
-  height: 20px;
-  width: 20px;
-}
-.amc-datetimepicker-selection button svg * {
-  fill: none;
-  stroke: var(--amc-datetimepicker-accentColor);
-  stroke-width: 4px;
-  stroke-miterlimit: 10;
-}
-.amc-datetimepicker-selection-info {
-  flex: 1;
-  font-size: 1.5rem;
-  font-weight: 400;
-  letter-spacing: 1px;
-  cursor: pointer;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 .amc-datetimepicker-calendar,
 .amc-datetimepicker-months,
 .amc-datetimepicker-years,
 .amc-datetimepicker-weeks,
-.amc-datetimepicker-days {
+.amc-datetimepicker-days,
+.amc-datetimepicker-hours,
+.amc-datetimepicker-minutes {
   padding: 2px;
 }
 .amc-datetimepicker-calendar-weeks,
@@ -221,7 +158,8 @@
   cursor: pointer;
   min-height: 3em;
 }
-.amc-datetimepicker-calendar-day._today:after {
+.amc-datetimepicker-calendar-day._today:after,
+.amc-datetimepicker-calendar-day._now:after {
   position: absolute;
   content: '';
   width: 1em;
@@ -251,7 +189,9 @@
   grid-template-columns: repeat(3, 1fr);
 }
 .amc-datetimepicker-months-month,
-.amc-datetimepicker-years-year {
+.amc-datetimepicker-years-year,
+.amc-datetimepicker-hours-hour,
+.amc-datetimepicker-minutes-minute {
   border: 1px solid transparent;
   position: relative;
   display: flex;
@@ -262,7 +202,13 @@
   min-height: 3em;
 }
 .amc-datetimepicker-months-month._today:after,
-.amc-datetimepicker-years-year._today:after {
+.amc-datetimepicker-years-year._today:after,
+.amc-datetimepicker-hours-hour._today:after,
+.amc-datetimepicker-minutes-minute._today:after,
+.amc-datetimepicker-months-month._now:after,
+.amc-datetimepicker-years-year._now:after,
+.amc-datetimepicker-hours-hour._now:after,
+.amc-datetimepicker-minutes-minute._now:after {
   position: absolute;
   content: '';
   width: 1em;
@@ -274,19 +220,40 @@
   opacity: var(--lowOpacity);
 }
 .amc-datetimepicker-months-month._selected,
-.amc-datetimepicker-years-year._selected {
+.amc-datetimepicker-years-year._selected,
+.amc-datetimepicker-hours-hour._selected,
+.amc-datetimepicker-minutes-minute._selected {
   background-color: var(--amc-datetimepicker-accentColor);
   color: var(--amc-datetimepicker-backgroundColor);
 }
 .amc-datetimepicker-months-month._selected::after,
-.amc-datetimepicker-years-year._selected::after {
+.amc-datetimepicker-years-year._selected::after,
+.amc-datetimepicker-hours-hour._selected::after,
+.amc-datetimepicker-minutes-minute._selected::after {
   background-color: var(--amc-datetimepicker-backgroundColor);
 }
 .amc-datetimepicker-months-month:hover:not(._selected),
-.amc-datetimepicker-years-year:hover:not(._selected) {
+.amc-datetimepicker-years-year:hover:not(._selected),
+.amc-datetimepicker-hours-hour:hover:not(._selected),
+.amc-datetimepicker-minutes-minute:hover:not(._selected) {
   border-color: var(--amc-datetimepicker-accentColor);
 }
 .amc-datetimepicker-months-month:not(._current):not(._selected),
-.amc-datetimepicker-years-year:not(._current):not(._selected) {
+.amc-datetimepicker-years-year:not(._current):not(._selected),
+.amc-datetimepicker-hours-hour:not(._current):not(._selected),
+.amc-datetimepicker-minutes-minute:not(._current):not(._selected) {
   opacity: var(--lowOpacity);
+}
+.amc-datetimepicker-hours-hour {
+  min-width: 4em;
+  min-height: 5em;
+}
+.amc-datetimepicker-minutes-minute {
+  min-width: 3em;
+}
+.amc-datetimepicker-minutes-minute._strong {
+  font-weight: bold;
+}
+.amc-datetimepicker-datetimeseperator {
+  margin-bottom: 20px;
 }
