--- a/Demo/Pages/DateTimePickerPage.razor
+++ b/Demo/Pages/DateTimePickerPage.razor
@@ -4,13 +4,16 @@
 
 <div class="amc-datetimepicker-section">
     <div>
+        <h2>Date Picker</h2>
+        <DateTimePicker Mode="DateTimePickerMode.Date"></DateTimePicker>
+    </div>
+    <div>
+        <h2>Time Picker</h2>
         <DateTimePicker Mode="DateTimePickerMode.Time"></DateTimePicker>
     </div>
     <div>
+        <h2>Date and Time Picker</h2>
         <DateTimePicker Mode="DateTimePickerMode.DateAndTime"></DateTimePicker>
-    </div>
-    <div>
-        <DateTimePicker Mode="DateTimePickerMode.Date"></DateTimePicker>
     </div>
 </div>
 
